--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         </div>
         <div class="home-img">
-            <img src="" alt="">
+            <img src="img.jpg" alt="">
 
         </div>
 
